# AI-Chat-Tree

./: LICENSE  README.md  用户消息调用链条分析报告.md  项目审查报告.md
chat/: .env  config.yml  pyproject.toml  readMe.md
chat/chat/: __main__.py  application.py  chat.py  cli.py  config.py  consts.py  data_status.py  error_handling.py  gui.py  gui_consts.py  model.py  model_manager.py  model_tools.py  run.py  sound_player.py  speech_to_text.py  text_to_speech.py  tool_call_looper.py  util.py  voice_input_manager.py  wake_word_detector.py  ws_serve.py
chat/chat/tools/: __init__.py  calculate_tool.py  code_execute_tool.py  result.py  shell_tool.py  smart_calc_tool.py  task_tool.py  todo_tool.py  tool_call_accumuator.py  web_search_tool.py
web-chat/: eslint.config.mjs  package.json  webpack.config.js
web-chat/src/: App.vue  audio-player.js  capture-image.js  event-bus.js  index.html  main.js  markdown-parser.js  util.js
web-chat/src/components/: Message.vue  MessageList.vue  OptionBar.vue  SendMessage.vue  StatusBar.vue  Uploader.vue
web-chat/src/models/: message-collection.js  message.js  user.js
